inventory new api added